docker-compose/templates/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: task_tracker_backend_route
                  virtual_hosts:
                    - name: task_tracker_backend
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: { }
                              regex: \*
                        allow_methods: "GET, POST, PUT"
                        allow_headers: "authorization, content-type, x-requestid, x-requested-with, x-signalr-user-agent"
                        allow_credentials: true
                      routes:
                        - name: "task-api-dapr"
                          match:
                            prefix: "/task-api-dapr/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/v1.0/invoke/task-tracker-web-api/method/"
                            cluster: dapr
                        - name: "task-api-direct"
                          match:
                            prefix: "/task-api-direct/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: taskService
                http_filters:
                  - name: envoy.cors
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: dapr
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: dapr
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3500
    - name: taskService
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: taskService
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${TASK_SERVICE_NAME}
                      port_value: ${TASK_SERVICE_PORT}
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
